<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <CheckBox
        android:id="@+id/cb_Politics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_Politics"/>
    <CheckBox
        android:id="@+id/cb_Sports"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_Sports"/>
    <CheckBox
        android:id="@+id/cb_Travels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_Travels"/>
</LinearLayout>