<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">
    <CheckBox
        android:id="@+id/cb_Arts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_Arts"/>
    <CheckBox
        android:id="@+id/cb_Business"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_Business"/>
    <CheckBox
        android:id="@+id/cb_Entrepreneurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cb_Entrepreneurs"/>
</LinearLayout>